--- a/package.json
+++ b/package.json
@@ -49,5 +49,5 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
-  "homepage": "https://sandeshnepali.github.io/"
+  "homepage": "https://sandeshnepali.github.io/napa/"
 }
